--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mjml": "^4.15.3",
+    "mjml-browser": "^4.15.3",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
