--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "mjml": "^4.15.3",
     "mjml-browser": "^4.15.3",
     "next": "14.2.13",
+    "prism-react-renderer": "^2.4.0",
     "react": "^18",
     "react-dom": "^18"
   },
